# chief-wiggum

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: COMPLETED.md  HANDOVER-PROTOCOL.md  handover.json  settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: COWORK-HANDOVER-2026-02-26.md  TESTING-MATRIX.md
docs/adr/: ADR-001-initial-architecture.md  ADR-002-monorepo-structure.md
docs/guides/: GUIDE-001-coding-standards.md  GUIDE-002-workflow.md  GUIDE-003-development-protocol.md
docs/plans/: 2026-02-21-chi17-chi19-chi23-basic-ui.md  2026-02-21-chi18-chi21-chi26-basic-ui-part2.md  2026-02-21-chi22-chi20-chi24-session-model-packaging.md  2026-02-21-chi9-solidjs-tailwind-chi11-sqlite.md  2026-02-21-cli-connection-streaming.md  2026-02-21-permission-lifecycle-native-controls.md  2026-02-21-phase2-batch2.md  2026-02-21-tool-use-thinking-blocks.md  2026-02-22-chi107-chi95-chi111-slash-menu-redaction-limits.md  2026-02-22-chi108-chi96-sdk-discovery-diagnostic-bundle.md  2026-02-22-chi86-chi69-chi92-sidebar-vibrancy-inline-diff.md  2026-02-22-chi94-chi106-tracing-slash-commands.md  2026-02-22-file-explorer-at-mention.md  2026-02-22-phase2-batch3-ux-polish.md  2026-02-22-session-lifecycle-empty-state-project-sidebar.md  2026-02-23-chi139-chi143-project-actions.md  2026-02-23-chi144-chi145-actions-polish.md  2026-02-23-chi87-chi88-view-tabs-sidebar-search.md  2026-02-23-chi97-chi100-logging-diagnostics.md  2026-02-25-chi147-chi152-test-infrastructure.md  (+32 more)
scripts/: coverage-gate.sh
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  paths.rs
src-tauri/src/actions/: bridge.rs  event_loop.rs  manager.rs  mod.rs  scanner.rs
src-tauri/src/bridge/: adapter.rs  control.rs  event_loop.rs  manager.rs  mod.rs  parser.rs  permission.rs  process.rs  sdk_bridge.rs
src-tauri/src/commands/: actions.rs  bridge.rs  cli.rs  diagnostic.rs  export.rs  files.rs  git.rs  handover.rs  import.rs  logging.rs  mod.rs  project.rs  session.rs  settings.rs  slash.rs  templates.rs  terminal.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  queries.rs
src-tauri/src/files/: bundles.rs  mod.rs  scanner.rs  suggestions.rs  watcher.rs
src-tauri/src/git/: branches.rs  commit.rs  diff.rs  discard.rs  log.rs  mod.rs  remote.rs  repository.rs  staging.rs  stash.rs  status.rs
src-tauri/src/handover/: mod.rs  reconcile.rs
src-tauri/src/import/: consistency.rs  discover.rs  engine.rs  jsonl.rs  mod.rs  review.rs
src-tauri/src/logging/: bundle.rs  init.rs  mod.rs  redactor.rs  ring_buffer.rs
src-tauri/src/security/: keychain.rs  mod.rs  permissions.rs
src-tauri/src/settings/: mod.rs  validation.rs
src-tauri/src/slash/: mod.rs  scanner.rs
src-tauri/src/terminal/: manager.rs  mod.rs  session.rs  shells.rs
(+323 files in other folders)
